[workspace]
members = [
    "crates/sequencer_proof_client",
    "crates/zksync_os_fri_prover",
    "crates/zksync_os_snark_prover",
    "crates/zksync_os_prover_service",
    "crates/protocol_version",
]
resolver = "2"

[workspace.package]
edition = "2021"
#rust-version = "1.88"
version = "0.7.1"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-airbender-prover/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]
# internal dependencies
zksync_sequencer_proof_client = { path = "crates/sequencer_proof_client" }
protocol_version = { path = "crates/protocol_version" }

# zksync-airbender dependencies
zksync_airbender_execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.2" }
zksync_airbender_cli = { package = "cli", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.5.2" }

# zkos-wrapper dependencies
zkos_wrapper = { package = "zkos-wrapper", git = "https://github.com/matter-labs/zkos-wrapper.git", tag = "v0.5.4" }

# zksync-crypto-gpu dependencies
proof-compression = "=0.155.2"

# zksync-protocol dependencies
circuit_definitions = "=0.153.3"

# zksync-crypto dependencies
bellman = { package = "zksync_bellman", version = "=0.32.5" }
crypto_codegen = { package = "zksync_solidity_vk_codegen", version = "=0.32.5" }

# external dependencies
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22.1"
bincode = { version = "2", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json", "gzip", "brotli", "zstd", "deflate"] }
secrecy = "0.10.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
vise = "0.3.2"
vise-exporter = "0.3.2"
url = "2.5"

# Things below are to guarantee that we can compile in reasonable time.
# Once we do some optimizations to the zkos-wrapper and compression verifier, we'll be able to remove some of them.

[profile.release.package."blake2_with_compression_verifier"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release.package."zkos-wrapper"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release]
lto = false
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true
