[package]
name = "zksync_os_prover_service"
edition.workspace = true
#rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "zksync-os-prover-service"
path = "src/main.rs"

[dependencies]
protocol_version.workspace = true
zksync_sequencer_proof_client.workspace = true
# TODO: fix this, should be done together with moving all code base to a single binary
zksync_os_fri_prover = { path = "../zksync_os_fri_prover" }
zksync_os_snark_prover = { path = "../zksync_os_snark_prover" }

zksync_airbender_cli.workspace = true
zksync_airbender_execution_utils.workspace = true
zkos_wrapper.workspace = true

tokio.workspace = true
serde_json.workspace = true
reqwest.workspace = true

serde.workspace = true
anyhow.workspace = true
bincode.workspace = true
base64.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
url.workspace = true

[features]
gpu = [
    "zksync_airbender_cli/gpu",
    "zkos_wrapper/gpu",
    "zksync_os_fri_prover/gpu",
    "zksync_os_snark_prover/gpu",
]

[dev-dependencies]
async-trait.workspace = true
